# se-backend

./: .gitignore  .gitmodules  README.md  admin.json  api.md  flake.nix  pyproject.toml  user.json
app/: __main__.py
app/autoaim/: main.py
app/boundary/: deps.py
app/boundary/api/endpoints/: game.py  game_data.py  gamesupport.py  history.py  login.py
app/boundary/api/schemas/: game.py  game_data.py  gamesupport.py  history.py  login.py
app/config/: __init__.py  main.py
app/control/: game.py  game_log.py  recorder.py  user.py
app/core/: __init__.py
app/entity/models/: log.py  user.py  video_mata.py
app/entity/repositories/: log.py  user.py  video.py
app/game/: __init__.py
app/game_data/: __init__.py
app/gamesupport/: main.py
app/history/: __init__.py
app/login/: __init__.py  main.py
app/state/: __init__.py
src/: config.py  main.py
src/autoaim/: main.py
src/login/: __init__.py  main.py
